[gd_scene load_steps=6 format=3 uid="uid://blybpqug72ibk"]

[ext_resource type="Script" path="res://player.gd" id="1_ky1gh"]
[ext_resource type="AudioStream" uid="uid://vidjlk6ulxyj" path="res://Sounds/correct-156911.mp3" id="2_cp1lx"]
[ext_resource type="AudioStream" uid="uid://dbv1jac7xfykf" path="res://Sounds/spray-puff-272431.mp3" id="2_lo8h3"]
[ext_resource type="AudioStream" uid="uid://cd15gk6lxxip8" path="res://Sounds/classic-game-action-negative-18-224576.mp3" id="3_3lw00"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v4xrf"]
radius = 33.0151

[node name="Player" type="Area2D"]
script = ExtResource("1_ky1gh")
metadata/_edit_group_ = true

[node name="Test" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_v4xrf")

[node name="WipeCorrectSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_cp1lx")
volume_db = -3.759
pitch_scale = 0.9
bus = &"SFX"

[node name="WipeIncorrectSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3lw00")
volume_db = -3.759
bus = &"SFX"

[node name="SpraySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_lo8h3")
bus = &"SFX"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
